--- a/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
+++ b/ADMFacturar/Views/Inventario/IndexGeneral.cshtml
@@ -7,26 +7,26 @@
             @if (User.IsInRole("Administrador"))
             {
                 <a asp-action="Index" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fa-solid fa-box-open text-5xl text-indigo-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold text-gray-800">Ingreso de Inventario</h3>
-                        <p class="text-gray-600">Administración de Ingresos de Inventario</p>
+                        <h3 class="text-lg font-semibold text-white">Ingreso de Inventario</h3>
+                        <p class="text-white">Administración de Ingresos de Inventario</p>
                     </div>
                 </a>
 
                 <a asp-action="IndexSalida" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fa-solid fa-dolly text-5xl text-indigo-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold text-gray-800">Salida de Inventario</h3>
-                        <p class="text-gray-600">Administración de Salidas de Inventario</p>
+                        <h3 class="text-lg font-semibold text-white">Salida de Inventario</h3>
+                        <p class="text-white">Administración de Salidas de Inventario</p>
                     </div>
                 </a>
 
                 <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold text-gray-800">Consulta de Inventario</h3>
-                        <p class="text-gray-600">Consulta de Existencias de Artículos</p>
+                        <h3 class="text-lg font-semibold text-white">Consulta de Inventario</h3>
+                        <p class="text-white">Consulta de Existencias de Artículos</p>
                     </div>
                 </a>
             }
@@ -34,10 +34,10 @@
             @if (User.IsInRole("Usuario"))
             {
                 <a asp-action="IndexExistencias" asp-controller="Inventario" class="transform hover:scale-105 transition duration-500">
-                    <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fa-solid fa-clipboard-list text-5xl text-indigo-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold text-gray-800">Consulta de Inventario</h3>
-                        <p class="text-gray-600">Consulta de Existencias de Artículos</p>
+                        <h3 class="text-lg font-semibold text-white">Consulta de Inventario</h3>
+                        <p class="text-white">Consulta de Existencias de Artículos</p>
                     </div>
                 </a>
             }
