--- a/ADMFacturar/Views/Inventario/SalidaInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/SalidaInventario.cshtml
@@ -24,39 +24,22 @@
             <h2 class="text-lg font-bold mb-4">Salida de Inventario</h2>
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
                 <div class="sm:col-span-2">
-                    <label for="PK_FK_Documento" class="block text-sm font-medium">Número de Documento</label>
+                    <label for="PK_FK_Documento" class="block text-sm font-medium leading-6 text-white">Número de Documento</label>
                     <div class="mt-2">
-                        <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
-                    <label for="Fecha_Salida" class="block text-sm font-medium">Fecha de Salida</label>
+                    <label for="Fecha_Salida" class="block text-sm font-medium leading-6 text-white">Fecha de Salida</label>
                     <div class="mt-2">
-                        <input asp-for="Fecha_Salida" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" required>
+                        <input asp-for="Fecha_Salida" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                     </div>
                 </div>
-
-                @*             <div class="sm:col-span-2">
-                <label for="Tipo_Salida" class="block text-sm font-medium">Proveedor</label>
-                <div class="mt-2">
-                <select asp-for="Tipo_Salida" id="Tipo_Salida" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;" required>
-                <option value="">Seleccione un proveedor</option>
-                @if (proveedores != null)
-                {
-                @foreach (var proveedor in proveedores)
-                {
-                <option value="@proveedor.PK_Proveedor">@proveedor.Nombre</option>
-                }
-                }
-                </select>
-
-                </div>
-                </div> *@
                 <div class="sm:col-span-2">
-                    <label for="Tipo_Salida" class="block text-sm font-medium">Tipo Salida</label>
+                    <label for="Tipo_Salida" class="block text-sm font-medium leading-6 text-white">Tipo Salida</label>
                     <div class="mt-2">
-                        <select asp-for="Tipo_Salida" id="Tipo_Salida" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;">
+                        <select asp-for="Tipo_Salida" id="Tipo_Salida" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
                             <option value="">Seleccione una opción</option>
                             <option value="Daño">Daño</option>
                             <option value="Regalía">Regalía</option>
@@ -67,9 +50,9 @@
                 </div>
 
                 <div class="sm:col-span-4">
-                    <label for="Observaciones" class="block text-sm font-medium">Observaciones</label>
+                    <label for="Observaciones" class="block text-sm font-medium leading-6 text-white">Observaciones</label>
                     <div class="mt-2">
-                        <input asp-for="Observaciones" id="Observaciones" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                        <input asp-for="Observaciones" id="Observaciones" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
             </div>
@@ -78,7 +61,7 @@
                 <div class="sm:col-span-2">
                     <label for="PK_FK_Articulo" class="block text-sm font-medium leading-6 text-white">Código Artículo</label>
                     <div class="mt-2 flex items-center space-x-2">
-                        <input asp-for="PK_FK_Articulo" value="" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="PK_FK_Articulo" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                         <button type="button" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded inline-flex items-center justify-center" onclick="openModal()">
                             <i class="fas fa-search"></i>
                         </button>
@@ -87,11 +70,11 @@
                 <div class="sm:col-span-2">
                     <label for="Cantidad" class="block text-sm font-medium leading-6 text-white">Cantidad</label>
                     <div class="mt-2">
-                        <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                     </div>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="Costo" class="block text-sm font-medium leading-6 text-white invisible">Agregar</label>
+                    <label for="Costo" class="block text-sm font-medium leading-6 text-white">Agregar</label>
                     <div class="mt-2 flex items-center space-x-2">
                         <!-- <input asp-for="Costo" value="" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required> -->
                         <button type="submit" asp-action="SalidaInventario" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-1.5 px-4 rounded">
