--- a/ADMFacturar/Views/Proveedores/Index.cshtml
+++ b/ADMFacturar/Views/Proveedores/Index.cshtml
@@ -33,9 +33,9 @@
 			<h2 class="text-lg font-bold mb-4">Filtro de Proveedores</h2>
 			<div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
 				<div class="sm:col-span-1">
-					<label for="nombre_vendedor" class="block text-sm font-medium">Nombre de Proveedor</label>
+					<label for="nombre_vendedor" class="block text-sm font-medium leading-6 text-white">Nombre de Proveedor</label>
 					<div class="mt-1">
-						<input type="text" id="nombre_vendedor" name="nombre_vendedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						<input type="text" id="nombre_vendedor" name="nombre_vendedor" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
 					</div>
 				</div>
 			</div>
@@ -44,79 +44,72 @@
 	<!-- Final de Formulario -->
 
 	<!-- Listado de proveedores -->
-	<div class="w-full mt-8">
-		<div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
-			<h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Proveedores</h3>
-				<a onclick="abrirModal('modalCrearProveedor')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Proveedor</a>
-		</div>
-
-
-		<!--                  Tabla                        -->
-		<div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-			<table id="tablaProveedores" class="min-w-full leading-normal">
-				<thead>
-					<tr class="bg-gray-800 text-white">
-						<th class="py-3 text-center">Código Proveedor</th>
-						<th class="py-3 text-center">Nombre Proveedor</th>
-						<th class="py-3 text-center">Teléfono Proveedor</th>
-						<th class="py-3 text-center">Correo Proveedor</th>
-						<th class="py-3 text-center">Dirección Proveedor</th>
-						<th class="py-3 text-center">Estado Proveedor</th>
-						<th class="py-3 text-center">Acciones</th>
-
-					</tr>
-				</thead>
-				<tbody id="bodyTablaVendedores" class="text-gray-700">
-					@if (proveedores != null)
-					{
-						@foreach (var proveedor in proveedores)
-						{
-							<tr class="border-b border-gray-200 hover:bg-gray-100">
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => proveedor.PK_Proveedor)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => proveedor.Nombre)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => proveedor.Telefono)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => proveedor.Correo)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => proveedor.Direccion)</td>
-								<td class="py-3 text-center">
-									@if (proveedor.Estado)
-									{
-										<span class="bg-green-200 text-green-600 py-1 px-3 rounded-full text-xs">Activo</span>
-									}
-									else
-									{
-										<span class="bg-red-200 text-red-600 py-1 px-3 rounded-full text-xs">Inactivo</span>
-									}
-								</td>
-								@* <td class="p-3 border border-gray-300"> *@
-								<td>
-									<div class="flex justify-center space-x-2">
-										<div class="flex justify-center space-x-2">
-											<a onclick="ActuVarProveedor('@proveedor.PK_Proveedor')" class="text-blue-600 hover:text-blue-900" title="Editar">
-												<i class="fas fa-edit"></i>
-											</a>
-
-											<form method="post" asp-action="DesactivarProveedor" class="desactivar-form">
-												<input type="hidden" name="PK_Proveedor" value="@proveedor.PK_Proveedor">
-												<button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
-													<i class="fa-solid fa-ban"></i>
-												</button>
-											</form>
-										</div>
-									</div>
-								</td>
-							</tr>
-						}
-					}
-					else
-					{
-						<tr>
-							<td colspan="14">No hay datos disponibles.</td>
-						</tr>
-					}
-				</tbody>
-			</table>
-		</div>
-	</div>
+	<div class="w-full mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
+    <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
+        <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Proveedores</h3>
+        <a onclick="abrirModal('modalCrearProveedor')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Proveedor</a>
+    </div>
+    <!-- Tabla -->
+    <div class="overflow-auto mt-4">
+        <table id="tablaProveedores" class="min-w-full bg-gray-800 text-white">
+            <thead class="bg-gray-900">
+                <tr>
+                    <th class="py-3 px-4 text-center">Código Proveedor</th>
+                    <th class="py-3 px-4 text-center">Nombre Proveedor</th>
+                    <th class="py-3 px-4 text-center">Teléfono Proveedor</th>
+                    <th class="py-3 px-4 text-center">Correo Proveedor</th>
+                    <th class="py-3 px-4 text-center">Dirección Proveedor</th>
+                    <th class="py-3 px-4 text-center">Estado Proveedor</th>
+                    <th class="py-3 px-4 text-center">Acciones</th>
+                </tr>
+            </thead>
+            <tbody id="bodyTablaProveedores" class="text-center">
+                @if (proveedores != null)
+                {
+                    @foreach (var proveedor in proveedores)
+                    {
+                        <tr class="even:bg-gray-700 hover:bg-gray-600">
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => proveedor.PK_Proveedor)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => proveedor.Nombre)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => proveedor.Telefono)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => proveedor.Correo)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => proveedor.Direccion)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">
+                                @if (proveedor.Estado)
+                                {
+                                    <span class="bg-green-200 text-green-600 py-1 px-3 rounded-full text-xs">Activo</span>
+                                }
+                                else
+                                {
+                                    <span class="bg-red-200 text-red-600 py-1 px-3 rounded-full text-xs">Inactivo</span>
+                                }
+                            </td>
+                            <td>
+                                <div class="flex justify-center space-x-2">
+                                    <a onclick="ActuVarProveedor('@proveedor.PK_Proveedor')" class="text-blue-600 hover:text-blue-900" title="Editar">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                    <form method="post" asp-action="DesactivarProveedor" class="desactivar-form">
+                                        <input type="hidden" name="PK_Proveedor" value="@proveedor.PK_Proveedor">
+                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
+                                            <i class="fa-solid fa-ban"></i>
+                                        </button>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td colspan="7">No hay datos disponibles.</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
 	
 	<!--                  Modal de Crear Template                        -->
