--- a/ADMFacturar/Views/Reportes/RCxC.cshtml
+++ b/ADMFacturar/Views/Reportes/RCxC.cshtml
@@ -99,8 +99,8 @@
                                 <td class="py-3 px-4 border-b border-gray-700">@documento.Nombre_Vendedor</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@documento.Fecha_Documento.ToString("d")</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@documento.Fecha_Vencimiento.ToString("d")</td>
-                                <td class="py-3 px-4 border-b border-gray-700">@documento.Total_XC.ToString("C")</td>
-                                <td class="py-3 px-4 border-b border-gray-700">@documento.Saldo_Pendiente.ToString("C")</td>
+                                <td class="py-3 px-4 border-b border-gray-700">@documento.Total_XC</td>
+                                <td class="py-3 px-4 border-b border-gray-700">@documento.Saldo_Pendiente</td>
                             </tr>
                         }
                     }
