--- a/ADMFacturar/Views/Reportes/RVentas.cshtml
+++ b/ADMFacturar/Views/Reportes/RVentas.cshtml
@@ -97,8 +97,8 @@
 								<td class="py-3 px-4 border-b border-gray-700">@factura.ClienteNombre</td>
 								<td class="py-3 px-4 border-b border-gray-700">@factura.FacturaFecha.ToString("d")</td>
 								<td class="py-3 px-4 border-b border-gray-700">@factura.VendedorNombre</td>
-								<td class="py-3 px-4 border-b border-gray-700">@factura.FacturaDescuento.ToString("C")</td>
-								<td class="py-3 px-4 border-b border-gray-700">@factura.FacturaTotal.ToString("C")</td>
+								<td class="py-3 px-4 border-b border-gray-700">@factura.FacturaDescuento</td>
+								<td class="py-3 px-4 border-b border-gray-700">@factura.FacturaTotal</td>
 							</tr>
 						}
 					}
