--- a/ADMFacturar/Views/Transportes/Index.cshtml
+++ b/ADMFacturar/Views/Transportes/Index.cshtml
@@ -2,7 +2,7 @@
 @model Transporte
 
 @{
-    var tranportes = ViewData["Transportes"] as List<Transporte>;
+    var transportes = ViewData["Transportes"] as List<Transporte>;
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -30,9 +30,9 @@
         <h2 class="text-lg font-bold mb-4">Filtro de Transportes</h2>
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
             <div class="sm:col-span-1">
-                <label for="nombre_transporte" class="block text-sm font-medium">Nombre de Transporte</label>
+                <label for="nombre_transporte" class="block text-sm font-medium leading-6 text-white">Nombre de Transporte</label>
                 <div class="mt-1">
-                    <input type="text" id="nombre_transporte" name="nombre_transporte" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                    <input type="text" id="nombre_transporte" name="nombre_transporte" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
                 </div>
             </div>
         </div>
@@ -41,40 +41,31 @@
 <!-- Final de Formulario -->
 
 
-<div class="w-full mt-8">
+<div class="w-full mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
     <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
         <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Listado de Transportes</h3>
-        <div>
-            @* <a asp-action="CrearTransporte" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a> *@
-            <a onclick="abrirModal('modalCrearTransporte')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a>
-       </div>
+        <a onclick="abrirModal('modalCrearTransporte')" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Crear Transporte</a>
     </div>
-
-
-    <!--                  Tabla                        -->
-    @* <div>
-        <button class="btn btnEditar" title="Editar Template" onclick="abrirModal('modalCrearTransporte')">Test modal<button/>
-    </div> *@
-    <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-            <table id="tablaTransportes" class="min-w-full leading-normal">
-            <thead>
-                <tr class="bg-gray-800 text-white">
-                    <th class="py-3 text-center">Código Transporte</th>
-                    <th class="py-3 text-center">Descripcion Transporte</th>
-                    <th class="py-3 text-center">Estado Transporte</th>
-                    <th class="py-3 text-center">Acciones</th>
-
+    <!-- Tabla -->
+    <div class="overflow-auto mt-4">
+        <table id="tablaTransportes" class="min-w-full bg-gray-800 text-white">
+            <thead class="bg-gray-900">
+                <tr>
+                    <th class="py-3 px-4 text-center">Código Transporte</th>
+                    <th class="py-3 px-4 text-center">Descripción Transporte</th>
+                    <th class="py-3 px-4 text-center">Estado Transporte</th>
+                    <th class="py-3 px-4 text-center">Acciones</th>
                 </tr>
             </thead>
-                <tbody id="bodyTablaTransportes" class="text-gray-700">
-                @if (tranportes != null)
+            <tbody id="bodyTablaTransportes" class="text-center">
+                @if (transportes != null)
                 {
-                    @foreach (var transporte in tranportes)
+                    @foreach (var transporte in transportes)
                     {
-                        <tr class="border-b border-gray-200 hover:bg-gray-100">
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => transporte.PK_Medio_Transporte)</td>
-                            <td class="py-3 text-center">@Html.DisplayFor(modelItem => transporte.Descripcion)</td>
-                            <td class="py-3 text-center">
+                        <tr class="even:bg-gray-700 hover:bg-gray-600">
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => transporte.PK_Medio_Transporte)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => transporte.Descripcion)</td>
+                            <td class="py-3 px-4 border-b border-gray-700">
                                 @if (transporte.Estado)
                                 {
                                     <span class="bg-green-200 text-green-600 py-1 px-3 rounded-full text-xs">Activo</span>
@@ -84,27 +75,26 @@
                                     <span class="bg-red-200 text-red-600 py-1 px-3 rounded-full text-xs">Inactivo</span>
                                 }
                             </td>
-                            @* <td class="p-3 border border-gray-300"> *@
-                                <td>
-                                    <div class="flex justify-center space-x-2">
-                                        <a onclick="ActuVarTransporte('@transporte.PK_Medio_Transporte')" class="text-blue-600 hover:text-blue-900" title="Editar">
-                                            <i class="fas fa-edit"></i>
-                                        </a>
-                                        <form method="post" asp-action="DesactivarTransporte" class="desactivar-form">
-                                            <input type="hidden" name="PK_Medio_Transporte" value="@transporte.PK_Medio_Transporte">
-                                            <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
-                                                <i class="fa-solid fa-ban"></i>
-                                            </button>
-                                        </form>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+                            <td>
+                                <div class="flex justify-center space-x-2">
+                                    <a onclick="ActuVarTransporte('@transporte.PK_Medio_Transporte')" class="text-blue-600 hover:text-blue-900" title="Editar">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                    <form method="post" asp-action="DesactivarTransporte" class="desactivar-form">
+                                        <input type="hidden" name="PK_Medio_Transporte" value="@transporte.PK_Medio_Transporte">
+                                        <button type="submit" class="text-red-600 hover:text-red-900 bg-transparent border-none p-0" title="Desactivar">
+                                            <i class="fa-solid fa-ban"></i>
+                                        </button>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
                     }
-                    else
+                }
+                else
                 {
                     <tr>
-                        <td colspan="14">No hay datos disponibles.</td>
+                        <td colspan="4" class="py-3 text-center">No hay datos disponibles.</td>
                     </tr>
                 }
             </tbody>
@@ -427,28 +417,28 @@
     // <!-- Fin Validación botón desactivar -->
 
 
-    //Funcion para paginar en index
-    $(document).ready(function () {
-        $('#tablaTransportes').DataTable({
-            "paging": true, // Habilita la paginación
-            "pagingType": "simple_numbers", // Tipo de paginación
-            "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Opciones de cantidad de registros por página
-            "searching": false, // Deshabilita la caja de búsqueda
-            "language": {
-                "lengthMenu": " Mostrar _MENU_ registros por página",
-                "zeroRecords": "No se encontraron resultados",
-                "info": " Mostrando página _PAGE_ de _PAGES_",
-                "infoEmpty": "No hay registros disponibles",
-                "infoFiltered": "(filtrado de _MAX_ registros totales)",
-                "paginate": {
-                    "first": "Primero",
-                    "last": "Último",
-                    "next": "Siguiente",
-                    "previous": "Anterior"
-                }
-            }
-        });
-    });
+        // Función para inicializar la paginación y estilos de DataTables en la tabla de transportes
+      $(document).ready(function () {
+			$('#tablaTransportes').DataTable({
+				"paging": true, // Habilita la paginación
+				"pagingType": "simple_numbers", // Tipo de paginación
+				"lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Opciones de cantidad de registros por página
+				"searching": false, // Deshabilita la caja de búsqueda
+				"language": {
+					"lengthMenu": " Mostrar _MENU_ registros por página",
+					"zeroRecords": "No se encontraron resultados",
+					"info": " Mostrando página _PAGE_ de _PAGES_",
+					"infoEmpty": "No hay registros disponibles",
+					"infoFiltered": "(filtrado de _MAX_ registros totales)",
+					"paginate": {
+						"first": "Primero",
+						"last": "Último",
+						"next": "Siguiente",
+						"previous": "Anterior"
+					}
+				}
+			});
+		});
 </script>
 </body>
 </html>
