--- a/ADMFacturar/Views/CXC/Detalles.cshtml
+++ b/ADMFacturar/Views/CXC/Detalles.cshtml
@@ -1,6 +1,9 @@
 ﻿@using ADM.Models
-@model IEnumerable<AbonoCXC>
+@model AbonoCXC
 
+@{
+    var abonos = ViewData["AbonosCXC"] as List<AbonoCXC>;
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -28,14 +31,14 @@
                 <div class="sm:col-span-2">
                     <label for="city" class="block text-sm font-medium leading-6 text-white">Documento</label>
                     <div class="mt-2">
-                        <input type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="@Model.FirstOrDefault().FK_Documento_CC">
+                        <input type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="@abonos.FirstOrDefault()?.FK_Documento_CC">
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
                     <label for="city" class="block text-sm font-medium leading-6 text-white">Total Factura</label>
                     <div class="mt-2">
-                        <input type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="@Model.FirstOrDefault().Monto_Total">
+                        <input type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" disabled value="@abonos.FirstOrDefault().Monto_Total">
                     </div>
                 </div>
 
@@ -61,9 +64,9 @@
                     </tr>
                 </thead>
                 <tbody id="bodyTablaAbonos" class="text-center">
-                    @if (Model != null)
+                    @if (abonos != null)
                     {
-                        foreach (var abono in Model)
+                        foreach (var abono in abonos)
                         {
                             <tr class="even:bg-gray-700 hover:bg-gray-600">
                                 <td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => abono.Numero_Abono)</td>
