--- a/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
+++ b/ADMFacturar/Views/Inventario/AgregarInventario.cshtml
@@ -25,23 +25,23 @@
             <h2 class="text-lg font-bold mb-4">Ingreso de Inventario</h2>
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
                 <div class="sm:col-span-2">
-                    <label for="PK_FK_Documento" class="block text-sm font-medium">Número de Documento</label>
+                    <label for="PK_FK_Documento" class="block text-sm font-medium leading-6 text-white">Número de Documento</label>
                     <div class="mt-2">
-                        <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="PK_FK_Documento" id="PK_FK_Documento" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
-                    <label for="Fecha_Compra" class="block text-sm font-medium">Fecha de Compra</label>
+                    <label for="Fecha_Compra" class="block text-sm font-medium leading-6 text-white">Fecha de Compra</label>
                     <div class="mt-2">
-                        <input asp-for="Fecha_Compra" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;" required>
+                        <input asp-for="Fecha_Compra" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                     </div>
                 </div>
 
                 <div class="sm:col-span-2">
-                    <label for="PK_FK_Proveedor" class="block text-sm font-medium">Proveedor</label>
+                    <label for="PK_FK_Proveedor" class="block text-sm font-medium leading-6 text-white">Proveedor</label>
                     <div class="mt-2">
-                        <select asp-for="PK_FK_Proveedor" id="PK_FK_Proveedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;" required>
+                        <select asp-for="PK_FK_Proveedor" id="PK_FK_Proveedor" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                             <option value="">Seleccione un proveedor</option>
                             @if (proveedores != null)
                             {
@@ -55,9 +55,9 @@
                     </div>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="FK_CondicionPago" class="block text-sm font-medium">Condición de Pago</label>
+                    <label for="FK_CondicionPago" class="block text-sm font-medium leading-6 text-white">Condición de Pago</label>
                     <div class="mt-2">
-                        <select asp-for="FK_CondicionPago" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 38px;" required>
+                        <select asp-for="FK_CondicionPago" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                             <option value="">Seleccionar Forma de Pago</option>
                             <option value="1">Contado</option>
                             <option value="2">Crédito 30 días</option>
@@ -67,9 +67,9 @@
                     </div>
                 </div>
                 <div class="sm:col-span-4">
-                    <label for="document_number" class="block text-sm font-medium">Observaciones</label>
+                    <label for="document_number" class="block text-sm font-medium leading-6 text-white">Observaciones</label>
                     <div class="mt-2">
-                        <input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                        <input type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6">
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="sm:col-span-2">
                     <label for="PK_FK_Articulo" class="block text-sm font-medium leading-6 text-white">Código Artículo</label>
                     <div class="mt-2 flex items-center space-x-2">
-                        <input asp-for="PK_FK_Articulo" value="" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="PK_FK_Articulo" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                         <button type="button" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded inline-flex items-center justify-center" onclick="openModal()">
                             <i class="fas fa-search"></i>
                         </button>
@@ -87,13 +87,13 @@
                 <div class="sm:col-span-2">
                     <label for="Cantidad" class="block text-sm font-medium leading-6 text-white">Cantidad</label>
                     <div class="mt-2">
-                        <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="Cantidad" value="" type="text" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" required>
                     </div>
                 </div>
                 <div class="sm:col-span-2">
                     <label for="Costo" class="block text-sm font-medium leading-6 text-white">Costo</label>
                     <div class="mt-2 flex items-center space-x-2">
-                        <input asp-for="Costo" value="" type="text" class="flex-grow rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
+                        <input asp-for="Costo" value="" type="text" class="flex-grow rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;" required>
                         <button type="submit" asp-action="AgregarInventario" class="btn bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-1.5 px-4 rounded">
                             Agregar Artículo
                         </button>
