--- a/ADMFacturar/Views/Inventario/IndexExistencias.cshtml
+++ b/ADMFacturar/Views/Inventario/IndexExistencias.cshtml
@@ -8,23 +8,12 @@
 <form>
     <div class="bg-gray-800 text-white p-5 rounded-lg shadow-lg">
         <h2 class="text-lg font-bold mb-4">Filtros de Búsqueda</h2>
-        @*   <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
-        <div class="sm:col-span-1">
-        <label for="document_number" class="block text-sm font-medium">Número de Documento</label>
-        <div class="mt-2">
-        <input type="text" id="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
-        </div>
-        </div>
-        <div class="sm:col-span-1 flex items-center">
-        <input type="checkbox" id="existencias_mayores" class="block rounded-md text-indigo-600 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6 mr-2">
-        <label for="existencias_mayores" class="text-sm font-medium">Existencias Mayores a 0</label>
-        </div>
-        </div> *@
+      
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
             <div class="sm:col-span-1">
-                <label for="document_number" class="block text-sm font-medium">Artículo o Descripción</label>
+                <label for="document_number" class="block text-sm font-medium leading-6 text-white">Artículo o Descripción</label>
                 <div class="mt-2">
-                    <input type="text" id="document_number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 17px;">
+                    <input type="text" id="document_number" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
             <div class="sm:col-span-1 flex items-center mt-6">
@@ -36,22 +25,22 @@
     </div>
 </form>
 
-<div class="w-full mt-8">
+<div class="w-full mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
     <div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
         <h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i>Listado de Inventario</h3>
     </div>
 
     <!--                  Tabla                        -->
-    <div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-        <table class="min-w-full leading-normal">
-            <thead>
-                <tr class="bg-gray-800 text-white">
-                    <th class="text-center py-3">Artículo</th>
-                    <th class="text-center py-3">Descripción</th>
-                    <th class="text-center py-3">Cantidad</th>
+    <div class="overflow-auto mt-4">
+        <table class="min-w-full bg-gray-800 text-white">
+            <thead class="bg-gray-900">
+                <tr>
+                    <th class="py-3 px-4 text-center">Artículo</th>
+                    <th class="py-3 px-4 text-center">Descripción</th>
+                    <th class="py-3 px-4 text-center">Cantidad</th>
                 </tr>
             </thead>
-            <tbody id="bodyTablaIngresos" class="text-gray-700">
+            <tbody id="bodyTablaIngresos" class="text-center">
             </tbody>
         </table>
     </div>
@@ -74,10 +63,10 @@
 
                 data.forEach(item => {
                     const row = `
-                            <tr class="border-b border-gray-200 hover:bg-gray-100">
-                                <td class="py-3 text-center">${item.pK_Articulo}</td>
-                                <td class="py-3 text-center">${item.descripcion}</td>
-                                <td class="py-3 text-center">${item.cantidad}</td>
+                                <tr class="even:bg-gray-700 hover:bg-gray-600">
+                                    <td class="py-3 px-4 border-b border-gray-700">${item.pK_Articulo}</td>
+                                    <td class="py-3 px-4 border-b border-gray-700"${item.descripcion}</td>
+                                    <td class="py-3 px-4 border-b border-gray-700">${item.cantidad}</td>
                             </tr>
                         `;
                     tableBody.innerHTML += row;
