--- a/ADMFacturar/Views/Reportes/Index.cshtml
+++ b/ADMFacturar/Views/Reportes/Index.cshtml
@@ -23,46 +23,51 @@
                 @foreach (var Reporte in Reportes)
                 {
                     <!-- Total de Venta -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fas fa-chart-line text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total de Venta</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalVenta)</p>
+                        <h3 class="text-lg font-semibold text-white">Total de Venta</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalVenta)</p>
                     </div>
                     <!-- Total de Cobro -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fas fa-coins text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total de Cobro</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalCobro)</p>
+                        <h3 class="text-lg font-semibold text-white">Total de Cobro</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalCobro)</p>
                     </div>
+
                     <!-- Total de Ganancia -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fas fa-money-bill text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total de Ganancia</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalGanancia)</p>
+                        <h3 class="text-lg font-semibold text-white">Total de Ganancia</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalGanancia)</p>
                     </div>
+
                     <!-- Total Costo Inventario -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fas fa-warehouse text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total Costo Inventario</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalCosto)</p>
+                        <h3 class="text-lg font-semibold text-white">Total Costo Inventario</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalCosto)</p>
                     </div>
+
                     <!-- Total Descuentos -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fas fa-percent text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total de Descuentos</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalDescuentos)</p>
+                        <h3 class="text-lg font-semibold text-white">Total de Descuentos</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalDescuentos)</p>
                     </div>
+
                     <!-- Total Notas de Crédito -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="far fa-credit-card text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total Notas de Crédito</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalNotaCredito)</p>
+                        <h3 class="text-lg font-semibold text-white">Total Notas de Crédito</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalNotaCredito)</p>
                     </div>
+
                     <!-- Total de Compras -->
-                    <div class="bg-white rounded-lg shadow-md p-6 text-center">
+                    <div class="max-w-sm p-6 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center">
                         <i class="fas fa-shopping-bag text-5xl text-blue-500 mb-4"></i>
-                        <h3 class="text-lg font-semibold">Total de Compras</h3>
-                        <p class="text-gray-600">₡@Html.DisplayFor(modelItem => Reporte.TotalCompras)</p>
+                        <h3 class="text-lg font-semibold text-white">Total de Compras</h3>
+                        <p class="text-white">₡@Html.DisplayFor(modelItem => Reporte.TotalCompras)</p>
                     </div>
                 }
             }       
@@ -70,83 +75,29 @@
 
         <!-- Botones de acceso a reportes -->
         <div class="mt-8 flex flex-wrap justify-center gap-4">
-            <a asp-action="RVentas" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="RVentas" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte de Ventas
             </a>
-            <a asp-action="REstadosCuentas" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="REstadosCuentas" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte Estados de Cuenta
             </a>
-            <a asp-action="RCardex" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="RKardex" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte Kardex
             </a>
-            <a asp-action="RInventario" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="RInventario" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte de Inventario
             </a>
-            <a asp-action="RVendedores" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="RVendedores" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte de Vendedores
             </a>
-            <a asp-action="RCxC" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="RCxC" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte Cuentas Por Cobrar
             </a>
-            <a asp-action="RCxP" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:bg-white hover:text-blue-500 text-white">
+            <a asp-action="RCxP" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer text-center text-white">
                 Reporte Cuentas por Pagar
             </a>
         </div>
 
-
-        <!-- Botones de acceso a reportes -->
-@* 
-        <div class="mt-8 flex flex-wrap justify-center gap-4">
-            <div id="button" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="RVentas">
-                    <div class="flex mt-2">
-                       <p class="mb-2 font-normal">Reporte de Ventas</p>
-                    </div>
-                </a>
-            </div>
-            <div id="button" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="REstadosCuentas">
-                    <div class="flex mt-1">                   
-                        <p class="mb-1 font-normal">Reporte Estados de Cuenta</p>
-                    </div>
-                </a>
-            </div>
-            <div id="DivCard" class="max-w-xs p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="RCardex">
-                    <div class="flex mt-2">                    
-                        <p class="mb-2 font-normal">Reporte Kardex</p>
-                    </div>
-                </a>
-            </div>
-            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="RInventario">
-                    <div class="flex mt-2">                     
-                        <p class="mb-2 font-normal">Reporte de Inventario</p>
-                    </div>
-                </a>
-            </div>
-            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="RVendedores">
-                    <div class="flex mt-2">                  
-                        <p class="mb-2 font-normal">Reporte de Vendedores</p>
-                    </div>
-                </a>
-            </div>
-            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="RCxC">
-                    <div class="flex mt-2">                     
-                        <p class="mb-2 font-normal">Reporte CxC</p>
-                    </div>
-                </a>
-            </div>
-            <div id="DivCard" class="max-w-sm p-4 bg-none border border-gray-200 rounded-lg shadow dark:bg-white-800 dark:border-white-700 ">
-                <a asp-action="RCxP">
-                    <div class="flex mt-2">                   
-                        <p class="mb-2 font-normal">Reporte CxP</p>
-                    </div>
-                </a>
-            </div>
-        </div> *@
 
     </div>
 
