--- a/ADMFacturar/Views/Reportes/REstadosCuentas.cshtml
+++ b/ADMFacturar/Views/Reportes/REstadosCuentas.cshtml
@@ -101,8 +101,8 @@
                                 <td class="py-3 px-4 border-b border-gray-700">@factura.Fecha.ToString("d")</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@factura.Fecha_Vencimiento.ToString("d")</td>
                                 <td class="py-3 px-4 border-b border-gray-700">@factura.Estado</td>
-                                <td class="py-3 px-4 border-b border-gray-700">@factura.Total.ToString("C")</td>
-                                <td class="py-3 px-4 border-b border-gray-700">@factura.Saldo_Pendiente.ToString("C")</td>
+                                <td class="py-3 px-4 border-b border-gray-700">@factura.Total</td>
+                                <td class="py-3 px-4 border-b border-gray-700">@factura.Saldo_Pendiente</td>
                             </tr>
                         }
                     }
